--- a/package.json
+++ b/package.json
@@ -2,10 +2,8 @@
   "name": "node-microframework",
   "version": "0.0.1",
   "description": "A simple microframework for Node.js with HTTP routing and middleware support.",
-  "main": "index.js",
-  "dependencies": {
-    "express": "^4.16.3"
-  },
+  "main": "src/server.js",
+  "dependencies": {},
   "devDependencies": {},
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
@@ -21,7 +19,7 @@
     "microframework",
     "middleware"
   ],
-  "author": "Peyman Afraz",
+  "author": "Peyman Afraz <afraz.peyman@gmail.com>",
   "license": "MIT",
   "bugs": {
     "url": "https://github.com/p-afraz/node-microframework/issues"
